--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "epps",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "version": "0.0.0",
   "type": "module",
   "main": "./dist/epps.umd.cjs",
@@ -23,7 +25,9 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@vitejs/plugin-vue": "^5.2.1",
+    "typescript": "^5.8.2",
     "vite": "^6.1.1"
   }
 }
