--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pinia",
     "store",
     "plugin",
-    "persist", 
+    "persist",
     "extends"
   ],
   "files": [
@@ -28,7 +28,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build && tsc --emitDeclarationOnly --outDir dist",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "crypto-js": "^4.2.0",
@@ -36,9 +37,11 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@pinia/testing": "^1.0.0",
     "@types/crypto-js": "^4.2.2",
     "@vitejs/plugin-vue": "^5.2.1",
     "typescript": "^5.8.2",
-    "vite": "^6.1.1"
+    "vite": "^6.1.1",
+    "vitest": "^3.0.9"
   }
 }
