--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "dev": "vite",
     "build": "vitest && vite build && tsc --emitDeclarationOnly --outDir dist",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@vitest/coverage-v8": "^3.1.1",
     "crypto-js": "^4.2.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13"
@@ -40,6 +42,7 @@
     "@pinia/testing": "^1.0.0",
     "@types/crypto-js": "^4.2.2",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/ui": "^3.1.1",
     "typescript": "^5.8.2",
     "vite": "^6.1.1",
     "vitest": "^3.0.9"
