--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "type": "git",
     "url": "https://github.com/AlxBDo/Epps"
   },
-  "version": "0.1.84",
+  "version": "0.1.91",
   "type": "module",
   "main": "./dist/epps.umd.cjs",
   "module": "./dist/epps.js",
@@ -40,9 +40,7 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "crypto-js": "^4.2.0",
-    "pinia": "^3.0.1",
-    "vue": "^3.5.13"
+    "crypto-js": "^4.2.0"
   },
   "devDependencies": {
     "@pinia/testing": "^1.0.0",
@@ -50,8 +48,10 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-v8": "^3.1.1",
     "@vitest/ui": "^3.1.1",
+    "pinia": "^3.0.2",
     "typescript": "^5.8.2",
     "vite": "^6.1.1",
-    "vitest": "^3.0.9"
+    "vitest": "^3.0.9",
+    "vue": "^3.5.16"
   }
 }
