--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "type": "git",
     "url": "https://github.com/AlxBDo/Epps"
   },
-  "version": "0.2.8",
+  "version": "0.3.0-beta.0",
   "type": "module",
   "main": "./dist/epps.umd.cjs",
   "module": "./dist/epps.js",
