add store custom database and test improvment

--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,7 @@ dist-ssr
 module-declaration.ts
 src/components
 src/stores/experiments
-src/models/contact.ts
-src/models/liste.ts
-src/models/user.ts
-
+src/models
 
 # tests
 coverage/*
